results/SVCOMP/conversational/log-StringCompare05-2024_03_16_14_22_18.txt
public class StringCompare05 {
    //@ requires string != null;
    //@ ensures \result <==> string.equals(s1);
    public static boolean f (String string) {
        String s1 = new String(string);
        return s1 == string;
    }
}
/home/max/Documents/JMLGPT/tmp/StringCompare05.java:3: error: cannot find symbol
    //@ ensures \result <==> string.equals(s1);
                                           ^
  symbol:   variable s1
  location: class StringCompare05
1 error

public class StringCompare05 {
    //@ requires string != null;
    //@ ensures \result <==> string.equals(\result);
    public static boolean f (String string) {
        String s1 = new String(string);
        return s1 == string;
    }
}

